fix version mobile

--- a/css/comprarEntradas.css
+++ b/css/comprarEntradas.css
@@ -18,7 +18,7 @@ body{
 }
 
 .title{
-    margin: 60px 0 120px 0;
+    margin: 60px 0 60px 0;
 }
 
 main{
@@ -70,6 +70,10 @@ main{
 
 .boton{
 	cursor: pointer;
+}
+
+#cuotas{
+	min-width: 64px;
 }
 
 @keyframes alerta {
