--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ main {
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
+    min-width: 222px;
 }
 
 body {
@@ -266,5 +267,14 @@ button {
     .overlapping span {
         font-size: 20px;
     }
-
 }
+@media (width < 714px){
+    .overlapping span {
+        font-size: 5px;
+    }
+
+    .overlapping{
+        padding: 1px;
+    }
+}
+
